# ecovatnik-calculator

./: .gitignore  README.md  calculator.py  debug_app.py  pyproject.toml  test_calc.py
.github/workflow/: pipelint.yml
.github/workflows/: pipeline.yml
common/: my_types.py
insulation_calc/: calculator.py
insulation_calc/common/: constants.py  my_types.py  parse_data.py  table_row.py  utils.py
